fix custom interval selector tooltip timescale name substring, width, and text wrapping

--- a/web/css/timeline.css
+++ b/web/css/timeline.css
@@ -454,7 +454,7 @@ g.plot rect.data-bar-invisible {
   position: absolute;
   bottom: 100%;
   border-bottom: 8px solid transparent;
-  width: 100%;
+  width: 150px;
   z-index: 10;
 }
 
